# DiceMaster

./: .gitignore  CMakeLists.txt  README.md  main.cpp  string_utility.cpp  vector_utility.cpp
include/: constantmodifier.h  dice.h  diceobject.h  diceset.h  string_utility.h  vector_utility.h
src/: constantmodifier.cpp  constantmodifier.h  dice.cpp  dice.h  diceobject.cpp  diceobject.h  diceset.cpp  diceset.h  dicevarsmodel.cpp  dicevarsmodel.h
src/command_line_interface/: consoleinterface.cpp  consoleinterface.h  consolewatcher.cpp  consolewatcher.h
